tests/fixtures/invalid/pow_int_list_bool.py
# Cannot call pow() with Int, List[int], Bool
x = pow(1, [1, 2, 3], True)
